@@ -9,6 +9,7 @@
     - Fix get_server_time for Oracle. # RT #58049
     - Support Data::ObjectDriver->get_dbh. RT #50022
     - Use sort by jobid on selects. RT #34843
+    - Added floor method to limit priortity job selection. RT #50842
 
 1.10 (2010-03-15)
     - Add $job->declined method for workers to be able to decline handling
